--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "algosdk": "^1.11.1",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
+    "react-confetti": "^6.0.1",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-use": "^17.3.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
